<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.LogInActivity"
    android:background="@color/white"
    android:orientation="vertical">

    <!-- Margin top: 40dp added due to hidden action and status bar-->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="120dp"
        android:text="@string/Voyager"
        android:textColor="@color/colorSecondaryDark"
        android:textSize="50sp" />

    <EditText
        android:id="@+id/txtEmailLogin"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:hint="@string/Enter_your_email"
        android:inputType="textEmailAddress"
        android:drawableStart="@drawable/ic_person_black_24dp"
        android:drawablePadding="10dp"
        android:backgroundTint="@color/colorSecondary"
        android:textColor="@color/colorSecondary"
        android:textColorHint="@color/colorSecondaryLight"/>

    <EditText
        android:id="@+id/txtPasswordLogIn"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/colorSecondary"
        android:drawablePadding="10dp"
        android:drawableStart="@drawable/ic_lock_black_24dp"
        android:hint="@string/Password"
        android:inputType="textPassword"
        android:textColor="@color/colorSecondary"
        android:textColorHint="@color/colorSecondaryLight" />

    <Button
        android:id="@+id/btnLogIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:text="@string/Log_In"
        android:textColor="@color/white"
        android:backgroundTint="@color/colorSecondary"/>

    <Button
        android:id="@+id/btnSignIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:text="@string/Dont_have_account"
        android:textColor="@color/colorSecondary"
        android:background="@android:color/transparent"/>

</LinearLayout>